Add Bootstrap and org member listing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
 <meta property="og:image" content="{{ site.url }}/img/kanji.png">
 <meta property="og:site_name" content="{{ site.name }}">
 <title>{{ page.title }}</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="icon" href="/img/kanji.png">
 <link rel="apple-touch-icon" href="/img/kanji.png">
