--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
   {% include head.html %}
 </head>
 <body>
-  {{ content }}
+  <div class="container">
+    {{ content }}
+  </div>
 </body>
 </html>
